[package]
name = "fractus"
description = "Cryptographic attack library for Rust and Python"
authors = ["GlacierSG <iamglaciersg@gmail.com>"]
repository = "https://github.com/GlacierSG/fractus"
readme = "README.md"
keywords = ["crypto","attack"]
license = "MIT"
version = "0.1.8"
edition = "2021"

[dependencies]
ctrlc = "3.4.4"
itertools = "0.13.0"
pyo3 = { version = "0.20.3", features = ["extension-module"], optional = true}
rayon = "1.10.0"

[lib]
crate-type = ["cdylib", "lib"]
